<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_newchap"
            android:icon="@android:drawable/ic_popup_reminder"
            android:title="@string/menu_newchap" />
        <item
            android:id="@+id/nav_lib"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Thư Viện" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_info"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/menu_info" />
    </group>
</menu>